kube/ingress/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  defaultBackend:
    service:
      name: api-service
      port:
        number: 8080
  rules:
    - host: order-api
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: api-service
              port:
                number: 8080
